detele QTS dine

--- a/dining/food0009.html
+++ b/dining/food0009.html
@@ -151,7 +151,7 @@
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Please visit our <a
                                     href=" https://www.lhotelgroup.com/en/hotel/lodgewood-by-lhotel-mongkok/Wine-Dine/canton-pot "
-                                    target="_blank"> official website </a> for more details.
+                                    target="_blank"> official website </a> for more details.<br><br>
                                 Outlet Address<br>
                                 canton pot - Lodgewood by L'hotel Mongkok Hong Kong
                                 <br>Address: 2/F, Lodgewood by L'hotel Mongkok Hong Kong, 1131 Canton Road, Mongkok,
