--- a/dining/food0015.html
+++ b/dining/food0015.html
@@ -138,7 +138,7 @@
                                 <p>Show this page to the merchant for redemption. To show offline, click 'Print' and
                                     choose 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                     Please visit our <a href=" http://www.mangotree.com.hk/ " target="_blank"> official
-                                        website </a> for more details.
+                                        website </a> for more details.<br><br>
                                     Outlet Address<br>
                                     Mango Tree (Elements Shop)
                                     <br>Address: Shop 2032, Elements, 1 Austin Road West, Tsim Sha Tsui, Kowloon
