--- a/dining/food0027.html
+++ b/dining/food0027.html
@@ -144,7 +144,7 @@
                             <p>Show this page to the merchant for redemption. To show offline, click 'Print' and choose
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Please visit our <a href=" http://www.ta-ke.com.hk " target="_blank"> official website
-                                </a> for more details.
+                                </a> for more details.<br><br>
                                 Outlet Address<br>
                                 Ta-ke
                                 <br>Address: Shop G01, Lee Garden Two, 28 Yun Ping Road, Causeway Bay, Hong Kong Island
