--- a/dining/food0028.html
+++ b/dining/food0028.html
@@ -145,7 +145,7 @@
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Please visit our <a
                                     href=" https://www.regalhotel.com/regal-kowloon-hotel/en/restaurants-and-bars/restaurant-mezzo.html "
-                                    target="_blank"> official website </a> for more details.
+                                    target="_blank"> official website </a> for more details.<br><br>
                                 Outlet Address<br>
                                 Mezzo - Regal Kowloon Hotel
                                 <br>Address: 1/F, 71 Mody Road, Tsim Sha Tsui, Kowloon
