--- a/dining/food0030.html
+++ b/dining/food0030.html
@@ -123,33 +123,24 @@
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
                         </div>
-                    <div class="quality-provider">
-                        <div class="offer-quality">
-                            <div class="detail">
-                                <div class="logo"><img src="../assets/images/common/logo-qts.png"
-                                        alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
-                                    Tourism Services Scheme Shops</span>
-                            </div>
-                        </div>
-                    </div>
 <div class="book">
                             <h3>How To Book</h3>
                             <div class="content">
                                 <p>Show this page to the merchant for redemption. To show offline, click 'Print' and
                                     choose 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                     Outlet Address<br>
-                                    <br>On-Yasai - Caueway Bay
+                                    On-Yasai - Caueway Bay
                                     <br>Address: 4/F, Plaza 2000, Causeway Bay, Hong Kong Island
                                     <br>Tel: +852 3709 8328
-                                    <br>On-Yasai - Tai Koo
+                                    <br><br>On-Yasai - Tai Koo
                                     <br>Address: Shop 309, 3/F, Cityplaza, 18 Taikoo Shing Road, Tai Koo, Hong Kong
                                     Island
                                     <br>Tel: +852 2107 4088
-                                    <br>On-Yasai - Tsim Sha Tsui
+                                    <br><br>On-Yasai - Tsim Sha Tsui
                                     <br>Address: Shop 37A, 3/F, LCX, Ocean Terminal, Harbour City, 3-27 Canton Road,
                                     Tsim Sha Tsui, Kowloon
                                     <br>Tel: +852 2153 1801
-                                    <br>On-Yasai - Kowloon Tong
+                                    <br><br>On-Yasai - Kowloon Tong
                                     <br>Address: Shop 29, LG1, Festival Walk, 80 Tat Chee Avenue, Kowloon Tong, Kowloon
                                     <br>Tel: +852 3106 4218
                                 </p>
