--- a/dining/food0031.html
+++ b/dining/food0031.html
@@ -144,11 +144,11 @@
                             <p>Show this page to the merchant for redemption. To show offline, click 'Print' and choose
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Outlet Address<br>
-                                <br>Gyu-Kaku Jinan-Bou - Tsuen Wan
+                                Gyu-Kaku Jinan-Bou - Tsuen Wan
                                 <br>Address: Shop 112B-113, 1/F, Tsuen Wan Plaza, 4-30 Tai Pa Street, Tsuen Wan, New
                                 Territories
                                 <br>Tel: +852 2808 0083
-                                <br>Gyu-Kaku Jinan-Bou - Tung Chung
+                                <br><br>Gyu-Kaku Jinan-Bou - Tung Chung
                                 <br>Address: Shop 706, 7/F, Phase 2, Citygate, 20 Tat Tung Road, Tung Chung, New
                                 Territories
                                 <br>Tel: +852 2628 9882</p>
