--- a/dining/food0034.html
+++ b/dining/food0034.html
@@ -129,28 +129,19 @@
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
                     </div>
-                    <div class="quality-provider">
-                        <div class="offer-quality">
-                            <div class="detail">
-                                <div class="logo"><img src="../assets/images/common/logo-qts.png"
-                                        alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
-                                    Tourism Services Scheme Shops</span>
-                            </div>
-                        </div>
-                    </div>
 <div class="book">
                         <h3>How To Book</h3>
                         <div class="content">
                             <p>Show this page to the merchant for redemption. To show offline, click 'Print' and choose
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Outlet Address<br>
-                                <br>alfafa - Island Place
+                                alfafa - Island Place
                                 <br>Address: Shops 123-124, 1/F, Island Place, 500 King's Road, Hong Kong Island
                                 <br>Tel: +852 2870 3312
-                                <br>alfafa - Kornhill Plaza
+                                <br><br>alfafa - Kornhill Plaza
                                 <br>Address: Shop no. M2, M/F, Kornhill Plaza, 1 Kornhill Road, Hong Kong Island
                                 <br>Tel: +852 2560 2038
-                                <br>alfafa - Lok Fu
+                                <br><br>alfafa - Lok Fu
                                 <br>Address: Shop Nos. L226 & L227, UG2/F, Lok Fu Place, Kowloon
                                 <br>Tel: +852 2468 2429</p>
                             <p class="view-more"><a class="button" href>+ View More</a></p>
