--- a/dining/food0038.html
+++ b/dining/food0038.html
@@ -144,17 +144,17 @@
                             <p>Show this page to the merchant for redemption. To show offline, click 'Print' and choose
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Outlet Address<br>
-                                <br>Beef & Liberty - Lan Kwai Fong
+                                Beef & Liberty - Lan Kwai Fong
                                 <br>Address: 3/F California Tower, 30-32 D'Aguilar Street, Central, Hong Kong Island
                                 <br>Tel: +852 2450 5778
-                                <br>Beef & Liberty - Stanley
+                                <br><br>Beef & Liberty - Stanley
                                 <br>Address: G04, G/F, 23 Carmel Road, Stanley Plaza, Hong Kong Island
                                 <br>Tel: +852 2563 2798
-                                <br>Beef & Liberty - Wong Chuk Hang
+                                <br><br>Beef & Liberty - Wong Chuk Hang
                                 <br>Address: Shop No. G07, G/F, One Island South, No. 2 Heung Yip Road, Wong Chuk Hang,
                                 Hong Kong Island
                                 <br>Tel: +852 2568 1098
-                                <br>Beef & Liberty - Sheung Wan
+                                <br><br>Beef & Liberty - Sheung Wan
                                 <br>Address: G/F, 252 Hollywood Road, Sheung Wan, Hong Kong Island
                                 <br>Tel: +852 2178 0522</p>
                             <p class="view-more"><a class="button" href>+ View More</a></p>
