--- a/dining/food0039.html
+++ b/dining/food0039.html
@@ -147,17 +147,17 @@
                                 Please visit our <a href=" http://www.bricklane.com.hk " target="_blank"> official
                                     website </a> for more details.
                                 Outlet Address<br>
-                                <br>BRICK LANE - Admiralty
+                                BRICK LANE - Admiralty
                                 <br>Address: Shop 404, 4/F, Citic Tower, 1 Tim Mei Avenue, Admiralty, Hong Kong Island
                                 <br>Tel: +852 2363 2500
-                                <br>BRICK LANE - Causeway Bay
+                                <br><br>BRICK LANE - Causeway Bay
                                 <br>Address: Shop G01, G/F, Lee Garden Six, 111 Leighton Road, Causeway Bay, Hong Kong
                                 Island
                                 <br>Tel: +852 2736 8893
-                                <br>BRICK LANE - Tsim Sha Tsui
+                                <br><br>BRICK LANE - Tsim Sha Tsui
                                 <br>Address: G/F, 17-23 Minden Avenue, Tsim Sha Tsui, Kowloon
                                 <br>Tel: +852 2721 0628
-                                <br>BRICK LANE Deli - Sha Tin
+                                <br><br>BRICK LANE Deli - Sha Tin
                                 <br>Address: Shop 126, 1/F, New Town Plaza Phase 1, 18 Sha Tin Centre Street, Sha Tin,
                                 New Territories
                                 <br>Tel: +852 2111 0480<br><br>
