--- a/dining/food0049.html
+++ b/dining/food0049.html
@@ -144,10 +144,10 @@
                             <p>Show this page to the merchant for redemption. To show offline, click 'Print' and choose
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Outlet Address<br>
-                                <br>Jardin de Jade - Wan Chai
+                                Jardin de Jade - Wan Chai
                                 <br>Address: G3-4, Sun Hung Kai Center, 30 Harbour Road, Wan Chai, Hong Kong Island
                                 <br>Tel: +852 3528 0228
-                                <br>Jardin de Jade - Taikoo Shing
+                                <br><br>Jardin de Jade - Taikoo Shing
                                 <br>Address: Shop 312, 3/F, Cityplaza, 18 Taikoo Shing Road, Taikoo Shing, Hong Kong
                                 Island
                                 <br>Tel: +852 3168 1271
