--- a/dining/food0054.html
+++ b/dining/food0054.html
@@ -118,34 +118,25 @@
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
                         </div>
-                    <div class="quality-provider">
-                        <div class="offer-quality">
-                            <div class="detail">
-                                <div class="logo"><img src="../assets/images/common/logo-qts.png"
-                                        alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
-                                    Tourism Services Scheme Shops</span>
-                            </div>
-                        </div>
-                    </div>
 <div class="book">
                             <h3>How To Book</h3>
                             <div class="content">
                                 <p>Show this page to the merchant for redemption. To show offline, click 'Print' and
                                     choose 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                     Outlet Address<br>
-                                    <br>Hei Yuet Palace - Aberdeen
+                                    Hei Yuet Palace - Aberdeen
                                     <br>Address: Shop 32, portion of G/F & 1/F, Noble Square, Wah Kwai Estate, 3 Wah
                                     Kwai Road, Aberdeen, Hong Kong Island
                                     <br>Tel: +852 2661 6061
-                                    <br>Hei Yuet Palace - Lam Tin
+                                    <br><br>Hei Yuet Palace - Lam Tin
                                     <br>Address: Shop 218, 1/F, Hing Tin Commercial Centre Complex, Hing Tin Estate, 8
                                     Lin Tak Road, Lam Tin, Kowloon
                                     <br>Tel: +852 2810 8700
-                                    <br>Hei Yuet Palace - Tsing Yi
+                                    <br><br>Hei Yuet Palace - Tsing Yi
                                     <br>Address: 2/F, Cheung Hong Commercial Centre No.1, Cheung Hong Estate, Tsing Yi,
                                     New Territories
                                     <br>Tel: +852 2336 9886
-                                    <br>Hei Yuet Palace - Tseung Kwan O
+                                    <br><br>Hei Yuet Palace - Tseung Kwan O
                                     <br>Address: Shop 133, 5/F & 6/F, Tsui Lam Shopping Centre, Tsui Lam Estate, Tseung
                                     Kwan O, New Territories
                                     <br>Tel: +852 2640 1111</p>
