--- a/dining/food0057.html
+++ b/dining/food0057.html
@@ -145,7 +145,7 @@
                             <p>Show this page to the merchant for redemption. To show offline, click 'Print' and choose
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Please visit our <a href="http://www.modernshanghai.com.hk/ " target="_blank"> official
-                                    website </a> for more details.
+                                    website </a> for more details.<br><br>
                                 Outlet Address<br>
                                 Modern Shanghai
                                 <br>Address: G19-21, G/F, Olympian City 3, 1 Hoi Wang Road, Tai Kok Tsui, Kowloon
