--- a/dining/food1100.html
+++ b/dining/food1100.html
@@ -143,11 +143,11 @@
                             <p>Show this page to the merchant for redemption. To show offline, click 'Print' and choose
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Outlet Address<br>
-                                <br>Café MED - Hung Hom
+                                Café MED - Hung Hom
                                 <br>Address: SHOP 757-759, LEVEL 7, FORTUNE METROPOLIS, NO. 6 METROPOLIS DRIVE HUNGHOM
                                 Kowloon
                                 <br>Tel: +852 2327 6320
-                                <br>Café MED - Sham Shui Po
+                                <br><br>Café MED - Sham Shui Po
                                 <br>Address: UNIT 601C, DRAGON CENTRE, 37K YEN CHOW STREET, SHAMSHUIPO, Kowloon
                                 <br>Tel: +852 23610813
                             </p>
