--- a/dining/food1118.html
+++ b/dining/food1118.html
@@ -118,25 +118,16 @@
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
                         </div>
-                    <div class="quality-provider">
-                        <div class="offer-quality">
-                            <div class="detail">
-                                <div class="logo"><img src="../assets/images/common/logo-qts.png"
-                                        alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
-                                    Tourism Services Scheme Shops</span>
-                            </div>
-                        </div>
-                    </div>
 <div class="book">
                             <h3>How To Book</h3>
                             <div class="content">
                                 <p>Show this page to the merchant for redemption. To show offline, click 'Print' and
                                     choose 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                     Outlet Address<br>
-                                    <br>Panda Wonton - Tsz Wan Shan
+                                    Panda Wonton - Tsz Wan Shan
                                     <br>Address: Shop 327-328, 3/F, Tsz Wan Shan Shopping Centre, Kowloon
                                     <br>Tel: +852 2808 2810
-                                    <br>Panda Wonton - Ho Man Tin
+                                    <br><br>Panda Wonton - Ho Man Tin
                                     <br>Address: Shop G37, G / F, Oi Man Plaza, Homantin, Kowloon
                                     <br>Tel: +852 2808 2330
                                 </p>
