--- a/dining/food1139.html
+++ b/dining/food1139.html
@@ -129,56 +129,47 @@
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
                     </div>
-                    <div class="quality-provider">
-                        <div class="offer-quality">
-                            <div class="detail">
-                                <div class="logo"><img src="../assets/images/common/logo-qts.png"
-                                        alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
-                                    Tourism Services Scheme Shops</span>
-                            </div>
-                        </div>
-                    </div>
 <div class="book">
                         <h3>How To Book</h3>
                         <div class="content">
                             <p>Show this page to the merchant for redemption. To show offline, click 'Print' and choose
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Outlet Address<br>
-                                <br>IPPUDO - Causeway Bay
+                                IPPUDO - Causeway Bay
                                 <br>Address: Shop No.1403, 14/F, Hysan Place 500 Hennessy Road, Causeway Bay, Hong Kong
                                 Island, Hong Kong
                                 <br>Tel: +852 2892-2387
-                                <br>IPPUDO - Central
+                                <br><br>IPPUDO - Central
                                 <br>Address: 3/F, Century Square, 1-13 D'Aguilar Street, Central, Hong Kong Island, Hong
                                 Kong
                                 <br>Tel: +852 2537-1829
-                                <br>IPPUDO - Admiralty
+                                <br><br>IPPUDO - Admiralty
                                 <br>Address: Shop F04-F06, 1/F, Lab Concept, Queensway Plaza, 93 Queensway, Admiralty,
                                 Hong Kong Island, Hong Kong
                                 <br>Tel: +852 2527-3526
-                                <br>IPPUDO - Tsim Sha Tsui
+                                <br><br>IPPUDO - Tsim Sha Tsui
                                 <br>Address: Shop No. 210, Silvercord, 2nd Floor, 30 Canton Road, Tsim Sha Tsui,
                                 Kowloon, Hong Kong
                                 <br>Tel: +852 2957-8893
-                                <br>IPPUDO - Mong Kok
+                                <br><br>IPPUDO - Mong Kok
                                 <br>Address: Shop 5, Level 4A, Langham Place, 8 Argyle Street, Mong Kok, Kowloon, Hong
                                 Kong
                                 <br>Tel: +852 3514-9380
-                                <br>IPPUDO - Olympic
+                                <br><br>IPPUDO - Olympic
                                 <br>Address: Shop No. 106, 1/F, Olympian City 2, 18 Hoi Ting Road, West Kowloon,
                                 Kowloon, Hong Kong
                                 <br>Tel: +852 2526-8900
-                                <br>IPPUDO - Jordan
+                                <br><br>IPPUDO - Jordan
                                 <br>Address: Shop 1, G/F, Eaton Hong Kong 380 Nathan Road, Kowloon, Hong Kong
                                 <br>Tel: +852 2763 1228
-                                <br>IPPUDO - Kowloon Bay
+                                <br><br>IPPUDO - Kowloon Bay
                                 <br>Address: Shop G54A1, Telford Plaza, Kowloon Bay, Kowloon, Hong Kong
                                 <br>Tel: +852 2706-9833
-                                <br>IPPUDO - Ma On Shan
+                                <br><br>IPPUDO - Ma On Shan
                                 <br>Address: Shop Nos. 2135-2139, L2, Ma On Shan Plaza, 608 Sai Sha Rd, Ma On Shan, New
                                 Territories, Hong Kong
                                 <br>Tel: +852 2631 0068
-                                <br>IPPUDO - Tung Chung
+                                <br><br>IPPUDO - Tung Chung
                                 <br>Address: Shop 603, 6th Floor, Citygate 18-20 Tat Tung Road, Tung Chung, Lantau
                                 Island, Hong Kong
                                 <br>Tel: +852 2252 7908
