--- a/dining/food1149.html
+++ b/dining/food1149.html
@@ -134,11 +134,11 @@
                                 <p>Show this page to the merchant for redemption. To show offline, click 'Print' and
                                     choose 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                     Outlet Address<br>
-                                    <br>Victoria Harbour Restaurant - Kowloon Bay
+                                    Victoria Harbour Restaurant - Kowloon Bay
                                     <br>Address: G256 and 1/F, Amoy Plaza, 77 Ngau Tau Kok Road, Kowloon Bay, Kowloon,
                                     Hong Kong
                                     <br>Tel: +852 2827 0818
-                                    <br>Victoria Harbour Supreme - Quarry Bay
+                                    <br><br>Victoria Harbour Supreme - Quarry Bay
                                     <br>Address: T3, 3/F, Kornhill Plaza, 1-2 Kornhill Road, Quarry Bay, Hong Kong
                                     Island, Hong Kong
                                     <br>Tel: +852 2811 1679
