--- a/dining/food0006.html
+++ b/dining/food0006.html
@@ -139,10 +139,10 @@
                                 <p>Show this page to the merchant for redemption. To show offline, click 'Print' and
                                     choose 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                     Outlet Address<br>
-                                    <br>Café Locomotive Contemporary Vietnamese Cuisine - Tai Hang
+                                    Café Locomotive Contemporary Vietnamese Cuisine - Tai Hang
                                     <br>Address: G/F 11 Wun Sha Street, Tai Hang, Hong Kong Island
                                     <br>Tel: +852 2882 8227
-                                    <br>Café Locomotive Contemporary Vietnamese Cuisine - Mongkok
+                                    <br><br>Café Locomotive Contemporary Vietnamese Cuisine - Mongkok
                                     <br>Address: Shop 12 L4A, Langham Place, Mongkok, Kowloon
                                     <br>Tel: +852 2368 2008
                                 </p>
