--- a/dining/food0008.html
+++ b/dining/food0008.html
@@ -150,7 +150,7 @@
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Please visit our <a
                                     href=" https://www.lhotelgroup.com/en/hotel/lhotel-elan/Wine-Dine/forte "
-                                    target="_blank"> official website </a> for more details.
+                                    target="_blank"> official website </a> for more details.<br><br>
                                 Outlet Address<br>
                                 forte - L'hotel élan
                                 <br>Address: 2/F, L'hotel élan, 38 Chong Yip Street, Kwun Tong, Kowloon
