--- a/dining/food0020.html
+++ b/dining/food0020.html
@@ -130,15 +130,6 @@
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
                     </div>
-                    <div class="quality-provider">
-                        <div class="offer-quality">
-                            <div class="detail">
-                                <div class="logo"><img src="../assets/images/common/logo-qts.png"
-                                        alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
-                                    Tourism Services Scheme Shops</span>
-                            </div>
-                        </div>
-                    </div>
 <div class="book">
                         <h3>How To Book</h3>
                         <div class="content">
@@ -146,7 +137,7 @@
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Please visit our <a
                                     href=" https://www.lhotelgroup.com/en/hotel/lhotel-causeway-bay-harbour-view/Wine-Dine/Corner-18 "
-                                    target="_blank"> official website </a> for more details.
+                                    target="_blank"> official website </a> for more details.<br><br>
                                 Outlet Address<br>
                                 Corner 18 - L'hotel Causeway Bay Harbour View
                                 <br>Address: 1/F, L' Hotel Causeway Bay Harbour View, 18 King's Road, Causeway Bay, Hong
