--- a/dining/food0023.html
+++ b/dining/food0023.html
@@ -130,15 +130,6 @@
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
                     </div>
-                    <div class="quality-provider">
-                        <div class="offer-quality">
-                            <div class="detail">
-                                <div class="logo"><img src="../assets/images/common/logo-qts.png"
-                                        alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
-                                    Tourism Services Scheme Shops</span>
-                            </div>
-                        </div>
-                    </div>
 <div class="book">
                         <h3>How To Book</h3>
                         <div class="content">
@@ -146,7 +137,7 @@
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Please visit our <a
                                     href=" https://www.lhotelgroup.com/en/hotel/lodgewood-by-lhotel-wanchai/Wine-Dine/sichuan-lab "
-                                    target="_blank"> official website </a> for more details.
+                                    target="_blank"> official website </a> for more details.<br><br>
                                 Outlet Address<br>
                                 Sichuan Lab - Lodgewood by L'hotel Wan Chai Hong Kong
                                 <br>Address: G/F, Lodgewood by L'hotel Wan Chai Hong Kong, 28 Tai Wo Street, Wan Chai,
