--- a/dining/food0033.html
+++ b/dining/food0033.html
@@ -145,7 +145,7 @@
                             <p>Show this page to the merchant for redemption. To show offline, click 'Print' and choose
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Please visit our <a href=" https://www.oneminden.com.hk/ " target="_blank"> official
-                                    website </a> for more details.
+                                    website </a> for more details.<br><br>
                                 Outlet Address<br>
                                 OM Tapas
                                 <br>Address: G/F, 1 Minden Avenue, Tsim Sha Tsui, Kowloon
