--- a/dining/food0048.html
+++ b/dining/food0048.html
@@ -138,10 +138,10 @@
                                 <p>Show this page to the merchant for redemption. To show offline, click 'Print' and
                                     choose 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                     Outlet Address<br>
-                                    <br>Rainbow Seafood Restaurant
+                                    Rainbow Seafood Restaurant
                                     <br>Address: 23-27, First Street, Sok Kwu Wan, Lamma Island, Outlying Islands
                                     <br>Tel: +852 2982 8100
-                                    <br>Rainbow Seafood Restaurant (Winstar)
+                                    <br><br>Rainbow Seafood Restaurant (Winstar)
                                     <br>Address: 1A-1B, First Street, Sok Kwu Wan, Lamma Island, Outlying Islands
                                     <br>Tel: +852 2982 8100</p>
                                 <p class="view-more"><a class="button" href>+ View More</a></p>
