--- a/dining/food0062.html
+++ b/dining/food0062.html
@@ -124,38 +124,29 @@
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
                         </div>
-                    <div class="quality-provider">
-                        <div class="offer-quality">
-                            <div class="detail">
-                                <div class="logo"><img src="../assets/images/common/logo-qts.png"
-                                        alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
-                                    Tourism Services Scheme Shops</span>
-                            </div>
-                        </div>
-                    </div>
 <div class="book">
                             <h3>How To Book</h3>
                             <div class="content">
                                 <p>Show this page to the merchant for redemption. To show offline, click 'Print' and
                                     choose 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                     Outlet Address<br>
-                                    <br>BUGIS - Cheung Sha Wan
+                                    BUGIS - Cheung Sha Wan
                                     <br>Address: Shop 305, 3/F D2 Place ONE, 9 Cheung Yee Street, Cheung Sha Wan,
                                     Kowloon
                                     <br>Tel: +852 2116 0160
-                                    <br>BUGIS - Sham Shui Po
+                                    <br><br>BUGIS - Sham Shui Po
                                     <br>Address: Shop No. L2-50 & 51, Level 2, V Walk, 28 Sham Mong Road, Sham Shui Po,
                                     Kowloon
                                     <br>Tel: +852 2426 0289
-                                    <br>BUGIS - Diamond Hill
+                                    <br><br>BUGIS - Diamond Hill
                                     <br>Address: Shop No. 234, Level 2, Plaza Hollywood, 3 Lung Poon Street, Diamond
                                     Hill, Kowloon
                                     <br>Tel: +852 2116 0838
-                                    <br>BUGIS - Tin Shui Wai
+                                    <br><br>BUGIS - Tin Shui Wai
                                     <br>Address: Shop LG15 & LG16, LG1/F, Tin Yiu Plaza, Tin Yiu Estate, Tin Wu Road,
                                     Tin Shui Wai, Yuen Long, New Territories
                                     <br>Tel: +852 2152 0689
-                                    <br>BUGIS - Tuen Mun
+                                    <br><br>BUGIS - Tuen Mun
                                     <br>Address: Shop No.L1-1 Level 1 V city, 83 Tuen Mun Heung Sze Wui Rd., Tuen Mun,
                                     New Territories
                                     <br>Tel: +852 2427 8989</p>
