--- a/dining/food1001.html
+++ b/dining/food1001.html
@@ -134,29 +134,29 @@
                                 <p>Show this page to the merchant for redemption. To show offline, click 'Print' and
                                     choose 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                     Outlet Address<br>
-                                    <br>Super Star Chinese Cuisine - Kwun Tong
+                                    Super Star Chinese Cuisine - Kwun Tong
                                     <br>Address: 1/F, Yen Sheng Centre, 64 Hoi Yuen Road, Kwun Tong, Kowloon
                                     <br>Tel: +852 26280120
-                                    <br>Super Star Chinese Cuisine - Tsuen Wan
+                                    <br><br>Super Star Chinese Cuisine - Tsuen Wan
                                     <br>Address: Shop 621-630, Level 6, Tsuen Wan Plaza, 4-30 Tai Pa Street, Tsuen Wan,
                                     New Territories
                                     <br>Tel: +852 26280686
-                                    <br>Super Star Chinese Cuisine - Yuen Long
+                                    <br><br>Super Star Chinese Cuisine - Yuen Long
                                     <br>Address: Shop A301-A302, Level 3, YOHO Mall II, 8-9 Long Yat Road & 9 Yuen Lung
                                     Street, Yuen Long, New Territories
                                     <br>Tel: +852 26280866
-                                    <br>Super Star Chinese Cuisine - Lai Chi Kok
+                                    <br><br>Super Star Chinese Cuisine - Lai Chi Kok
                                     <br>Address: G/F, Law's Commercial Plaza, 786-788 Cheung Sha Wan Road, Lai Chi Kok,
                                     Kowloon
                                     <br>Tel: +852 26280323
-                                    <br>Super Star Chinese Cuisine - Tsim Sha Tsui
+                                    <br><br>Super Star Chinese Cuisine - Tsim Sha Tsui
                                     <br>Address: 3/F, Grand Centre, 8 Humphreys Avenue, Tsim Sha Tsui, Kowloon
                                     <br>Tel: +852 26280698
-                                    <br>Super Star Chinese Cuisine - Mong Kok
+                                    <br><br>Super Star Chinese Cuisine - Mong Kok
                                     <br>Address: Shop 601 & 601A, 6/F, MOKO, 193 Prince Edward Road West, Mong Kok,
                                     Kowloon
                                     <br>Tel: +852 26280890
-                                    <br>Super Star Chinese Cuisine - Wan Chai
+                                    <br><br>Super Star Chinese Cuisine - Wan Chai
                                     <br>Address: 1/F, Shui On Centre, 6-8 Harbour Road, Wan Chai, Hong Kong Island
                                     <br>Tel: +852 26280989</p>
                                 <p class="view-more"><a class="button" href>+ View More</a></p>
