--- a/dining/food1111.html
+++ b/dining/food1111.html
@@ -128,45 +128,36 @@
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
                     </div>
-                    <div class="quality-provider">
-                        <div class="offer-quality">
-                            <div class="detail">
-                                <div class="logo"><img src="../assets/images/common/logo-qts.png"
-                                        alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
-                                    Tourism Services Scheme Shops</span>
-                            </div>
-                        </div>
-                    </div>
 <div class="book">
                         <h3>How To Book</h3>
                         <div class="content">
                             <p>Show this page to the merchant for redemption. To show offline, click 'Print' and choose
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Outlet Address<br>
-                                <br>Hung's Cart Noodles - Sha Tin
+                                Hung's Cart Noodles - Sha Tin
                                 <br>Address: Shop 8-9, 1/F, Block 2, Kwong Yuen Commercial Complex, 68 Siu Lek Yuen
                                 Road, Sha Tin, New Territories
                                 <br>Tel: +852 5385 5786
-                                <br>Hung's Cart Noodles - Sha Tin
+                                <br><br>Hung's Cart Noodles - Sha Tin
                                 <br>Address: Shop SU19-20, G/F, Hau Wo House, Ha Wo Che Chuen, 3 Tak Hau Street, Sha
                                 Tin, New Territories
                                 <br>Tel: +852 5707 1617
-                                <br>Hung's Cart Noodles - Yuen Long
+                                <br><br>Hung's Cart Noodles - Yuen Long
                                 <br>Address: Shop 8, G/F, Ping Yan Shopping Centre, Ping Yan Court, 65 Ping Ha Road,
                                 Yuen Long, New Territories
                                 <br>Tel: +852 5740 5009
-                                <br>Hung's Cart Noodles - Fanling
+                                <br><br>Hung's Cart Noodles - Fanling
                                 <br>Address: Shop L312, 3/F, Cheung Wah Shopping Centre, Cheung Wah Estate, 38 San Wan
                                 Road, Fanling
                                 <br>Tel: +852 5115 0007
-                                <br>Hung's Cart Noodles - Fanling
+                                <br><br>Hung's Cart Noodles - Fanling
                                 <br>Address: Shop A26 & 118, Flora Plaza, 88 Pak Wo Road, Fanling, New Territories
                                 <br>Tel: +852 6099 2542
-                                <br>Hung's Cart Noodles - Kwai Chung
+                                <br><br>Hung's Cart Noodles - Kwai Chung
                                 <br>Address: Shop D, G/F, Kam Wah House, 127-133 Wo Tong Tsui Street, Kwai Chung, New
                                 Territories
                                 <br>Tel: +852 3460 3930
-                                Chao Ji Noodle - Fanling
+                                <br><br>Chao Ji Noodle - Fanling
                                 <br>Address: Shop 48-49, G/F, Wah Ming Market, 21 Wah Ming Road, Fanling, New
                                 Territories
                                 <br>Tel: +852 5285 3287
