--- a/dining/food1138.html
+++ b/dining/food1138.html
@@ -129,52 +129,43 @@
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
                     </div>
-                    <div class="quality-provider">
-                        <div class="offer-quality">
-                            <div class="detail">
-                                <div class="logo"><img src="../assets/images/common/logo-qts.png"
-                                        alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
-                                    Tourism Services Scheme Shops</span>
-                            </div>
-                        </div>
-                    </div>
 <div class="book">
                         <h3>How To Book</h3>
                         <div class="content">
                             <p>Show this page to the merchant for redemption. To show offline, click 'Print' and choose
                                 'Save as PDF' (or print a hard copy) to show later.<br><br>
                                 Outlet Address<br>
-                                <br>DONDONYA - North Point
+                                DONDONYA - North Point
                                 <br>Address: Shop Nos U8-9 & U30, UG/F, Fitfort, 560 King's Road, North Point, Hong Kong
                                 Island, Hong Kong
                                 <br>Tel: +852 3591 9240
-                                <br>DONDONYA - Diamond Hill
+                                <br><br>DONDONYA - Diamond Hill
                                 <br>Address: Shop No. 371, Level 3, Plaza Hollywood, Diamond Hill, Kowloon, Hong Kong
                                 <br>Tel: +852 2715 7308
-                                <br>DONDONYA - Kowloon Bay
+                                <br><br>DONDONYA - Kowloon Bay
                                 <br>Address: Shop G54A2, Telford Plaza, Kowloon Bay, Kowloon, Hong Kong
                                 <br>Tel: +852 2763 1918
-                                <br>DONDONYA - Kwun Tong
+                                <br><br>DONDONYA - Kwun Tong
                                 <br>Address: Shop No. L6-3B, Level 6, apm, Millennium City 5, Kwun Tong, Kowloon, Hong
                                 Kong
                                 <br>Tel: +852 2351 6283
-                                <br>DONDONYA - Whampoa
+                                <br><br>DONDONYA - Whampoa
                                 <br>Address: Shop Nos. G2 & G2A, G/F, Treasure World, Site 11, Wonderful Worlds of
                                 Whampoa, Hung Hom, Kowloon, Hong Kong
                                 <br>Tel: +852 2321 8898
-                                <br>DONDONYA - Shatin
+                                <br><br>DONDONYA - Shatin
                                 <br>Address: Shop 502, 5/F, Home Square, 138 Sha Tin Rural Committee Road, Sha Tin, New
                                 Territories, Hong Kong
                                 <br>Tel: +852 2617 3882
-                                <br>DONDONYA - Tsing Yi
+                                <br><br>DONDONYA - Tsing Yi
                                 <br>Address: Shop Unit 212, L2, Maritime Square, 33 Tsing King Road, Tsing Yi, New
                                 Territories, Hong Kong
                                 <br>Tel: +852 3904 1613
-                                <br>DONDONYA - Ma On Shan
+                                <br><br>DONDONYA - Ma On Shan
                                 <br>Address: Shop Nos. 2135-2139, L2, Ma On Shan Plaza, 608 Sai Sha Rd, Ma On Shan, New
                                 Territories, Hong Kong
                                 <br>Tel: +852 2267 0838
-                                <br>DONDONYA - Tsuen Wan
+                                <br><br>DONDONYA - Tsuen Wan
                                 <br>Address: Tsuen Wan Shop S10-12, 2/F, Luk Yeung Galleria, Tsuen Wan, New Territories,
                                 Hong Kong
                                 <br>Tel: +852 2297 3638
